2006-04-21  Lluis Sanchez Gual  <lluis@novell.com> 

	* libstetic/wrapper/VScale.cs:
	* libstetic/wrapper/HScrollbar.cs:
	* libstetic/wrapper/HScale.cs:
	* libstetic/wrapper/VScrollbar.cs: Generate valid construction
	  expressions.

2006-04-18  Lluis Sanchez Gual  <lluis@novell.com> 

	* libstetic/wrapper/objects.xml:
	* libstetic/wrapper/Notebook.cs: Disable "Insert Before" and
	  "Delete Page" commands when there are no pages in the notebook.
	* stetic/Stetic.cs: Fix crash when deleting a widget.

2006-04-18  Lluis Sanchez Gual  <lluis@novell.com>

	* libstetic/wrapper/Widget.cs:
	* libstetic/wrapper/Container.cs: When adding a widget to a container,
	  make sure the identifiers are not duplicated.
	* libstetic/wrapper/Frame.cs: Fixed code generation for
	  the label widget.
	* libstetic/wrapper/Expander.cs: Fix code generation. Fixes bug #78090.

2006-04-10  Lluis Sanchez Gual  <lluis@novell.com> 

	* libstetic/editor/Boolean.cs: Fix nullref in some themes.

2006-04-03  Lluis Sanchez Gual  <lluis@novell.com> 

	* libsteticui/WidgetTreeCombo.cs: Don't show children
	  for widgets which don't allow children.
	* libsteticui/ProjectView.cs: Allow deleting top level
	  widgets from the project view.
	* libsteticui/ContextMenu.cs: Don't allow deleting or
	  cutting top level widgets.
	* libstetic/CustomWidget.cs: Use EventBox as base class.
	  A gdk window is required to make child widgets selectable.
	* libstetic/wrapper/Container.cs: Minor change in focus
	  handling. Don't allow deleting the only placeholder of a 
	  top level container.
	* libstetic/wrapper/Widget.cs: Avoid handling the FocusIn
	  event fired by an internal Select call.
	* libstetic/wrapper/objects.xml: Removed some read-only
	  properties.
	* libstetic/TypedPropertyDescriptor.cs: Provide defaults only
	  for primitive type properties.
	* stetic/Stetic.cs: When deleting a top level widget, hide the
	  corresponding tab.

2006-03-31  Lluis Sanchez Gual  <lluis@novell.com> 
